[package]
name = "lnradar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lnradar"
path = "src/main.rs"

[dependencies]
log = "*"
hex = "0.4.3"
rand = { version = "0.10.0", features = ["sys_rng"] }
lightning-invoice = { version = "0.34.0", features = ["serde", "std"] }
lightning-types = "0.3.1"
bitcoin = "0.32.8"
anyhow = "1.0.102"
cln-plugin = "0.5"
cln-rpc = "0.5.0"
serde_json = "1.0.149"
serde = "*"
tokio = { version = "1", features = ["full"] }
